<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="120dp"
        android:text="@string/hello_and_welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="224dp"
        android:layout_height="173dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/ic_baseline_assignment_24"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="77dp"
        android:gravity="center"
        android:text="@string/in_den_ersten_schritten_lernst_du_die_app_besser_kennen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="1/6"
        android:textSize="24dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="89dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toTopOf="@+id/skip1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/skip1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="@color/button_background_color_ob_used"
        android:text="Skip"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="@color/button_bg_color_back_not"
        android:text="Back"
        android:textColor="@color/black"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="@color/button_background_color_ob_lg_unused"
        android:text="Next"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>