<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:background="@color/white"
        android:contentDescription="@string/back_to_the_side"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="Speichern"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="127dp"
        android:layout_height="92dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/shape"
        android:src="@drawable/outline_photo_grey_500_18dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="91dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_photo_camera_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="161dp"
        android:text="Vorname:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/border"
        android:gravity="left"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/border"
        android:gravity="left"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Nachname:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view8"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="45dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/alter"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/border"
        android:gravity="left"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/sprachen"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/wohnort"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view9"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="45dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/border"
        android:gravity="left"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/border"
        android:gravity="left"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>